# gmail-bills-and-statements-watcher

./: .gitignore  README.md  init_oauth_flow_locally.py  pyproject.toml
.github/workflows/: deploy.yaml
cloud_functions/gmail_bills_and_statements_message_handler/: main.py
cloud_functions/gmail_bills_and_statements_message_watcher/: dto.py  main.py  run_mock_payload.sh
cloud_functions/gmail_bills_and_statements_oauth_callback/: main.py
src/: default_handlers.py  firestore_service.py  gcloud_utils.py  gmail_service.py  main.py  message_handler.py  models.py  oauth_utils.py  setup_env.py  setup_logger.py
src/cloud_functions/gmail_bills_and_statements_message_handler/: gmail.py  main.py  mock_payload.sh  run_locally.sh
src/cloud_functions/gmail_bills_and_statements_message_watcher/: dto.py  gmail.py  main.py  mock_payload.json  repository.py
src/cloud_functions/gmail_bills_and_statements_oauth_callback/: main.py
src/gmail_service/: __init__.py  models.py  service.py  wrappers.py
src/handler_service/: __init__.py  conditions.py  message_handlers.py  service.py
tests/: test_main.py  test_message_conditions.py
