[project]
name = "gmail-bills-and-statements-watcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "firebase-admin>=6.8.0",
    "functions-framework>=3.8.3",
    "google-cloud-firestore>=2.20.2",
    "loguru>=0.7.3",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
]
